[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Sprites/slingshot.png" type="Texture" id=1]
[ext_resource path="res://UI/Sprites/ninepatch-simple.png" type="Texture" id=2]
[ext_resource path="res://UI/SlingshotIcon.gd" type="Script" id=3]
[ext_resource path="res://UI/Sprites/pebble.png" type="Texture" id=4]

[node name="SlingshotIcon" type="Control"]
margin_bottom = 32.0
script = ExtResource( 3 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 42.0
margin_bottom = 23.0
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="Slingshot" type="Sprite" parent="."]
position = Vector2( 12, 11 )
scale = Vector2( 0.71875, 0.71875 )
texture = ExtResource( 1 )

[node name="Pebble1" type="Sprite" parent="."]
position = Vector2( 27, 7 )
texture = ExtResource( 4 )

[node name="Pebble2" type="Sprite" parent="."]
position = Vector2( 36, 7 )
texture = ExtResource( 4 )

[node name="Pebble3" type="Sprite" parent="."]
position = Vector2( 27, 16 )
texture = ExtResource( 4 )

[node name="Pebble4" type="Sprite" parent="."]
position = Vector2( 36, 16 )
texture = ExtResource( 4 )
